log
Tue 22 Aug 2023 10:28:15 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
533773f
Tue 22 Aug 2023 11:14:18 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:38: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   44 |       printf("Dato del primer nodo: %d\n", list->current->data);
      |                                     ~^     ~~~~~~~~~~~~~~~~~~~
      |                                      |                  |
      |                                      int                void *
      |                                     %p
list.c: In function ‘nextList’:
list.c:53:41: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   53 |       printf("Dato del nodo siguiente: %d\n", list->current->data);
      |                                        ~^     ~~~~~~~~~~~~~~~~~~~
      |                                         |                  |
      |                                         int                void *
      |                                        %p
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
list.c: In function ‘nextList’:
list.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
85c2beb
Tue 22 Aug 2023 11:15:00 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
list.c: In function ‘nextList’:
list.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2e8cab7
Tue 22 Aug 2023 11:15:31 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
9204786
Tue 22 Aug 2023 11:16:20 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:12: error: ‘newList’ undeclared (first use in this function); did you mean ‘nextList’?
   48 |     return newList;
      |            ^~~~~~~
      |            nextList
list.c:48:12: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘nextList’:
list.c:58:12: error: ‘newList’ undeclared (first use in this function); did you mean ‘nextList’?
   58 |     return newList;
      |            ^~~~~~~
      |            nextList
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
list.c: In function ‘nextList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1cb49d8
Tue 22 Aug 2023 11:16:48 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b596f14
Tue 22 Aug 2023 11:19:02 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e7f6f7e
Tue 22 Aug 2023 11:19:19 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   48 |   return;
      |   ^~~~~~
list.c:41:8: note: declared here
   41 | void * firstList(List * list) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b100649
Tue 22 Aug 2023 11:19:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:10: error: ‘newList’ undeclared (first use in this function); did you mean ‘nextList’?
   48 |   return newList;
      |          ^~~~~~~
      |          nextList
list.c:48:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6a00b71
Tue 22 Aug 2023 11:19:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
665da60
Tue 22 Aug 2023 11:21:41 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
809e3d4
Tue 22 Aug 2023 11:40:46 PM UTC: 
 list.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  1|5
total_score: 10/70
e7fdf68
Tue 22 Aug 2023 11:45:53 PM UTC: 
 list.c | 28 ++++------------------------
 1 file changed, 4 insertions(+), 24 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
list.c: In function ‘prevList’:
list.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dc69829
Tue 22 Aug 2023 11:47:14 PM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  9|3
total_score: 35/70
ee1a943
Tue 22 Aug 2023 11:49:47 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
3937b1b
Tue 22 Aug 2023 11:50:24 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
36ba04f
Tue 22 Aug 2023 11:51:19 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
ecfb6ec
Tue 22 Aug 2023 11:51:42 PM UTC: 
 list.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  11|1
total_score: 55/70
bdb7b59
Tue 22 Aug 2023 11:53:02 PM UTC: 
 list.c | 55 +++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 51 insertions(+), 4 deletions(-)
 tests:  12|0
total_score: 70/70
01065af
